syntax = "proto3";
option java_package = "com.ubtechinc.alpha";
message CmSetChargeAndPlayDataRequest {


    bool isOpen = 1;


}

message CmSetChargeAndPlayDataResponse {

        bool isSuccess = 1;
        int32 resultCode = 2;

}
